--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,286 @@
-.App {
-  text-align: center;
+@import "bootstrap/dist/css/bootstrap.min.css";
+
+.catImg{
+    width: 100%;
+    height: 100%;
+    transition: 0.3s;
+}
+.catImg:hover{
+    transform: scale(1.2);
+}
+.btn{
+    width: 100px;
+}
+.search-div{
+  /* border: 1px solid grey; */
+    width: 100vw;    
+    height: 82vh;
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.input-box{
+    position: relative;
+    top: 30px;
+    width: 60%;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.input-box input{
+    outline: none;
+    padding: 10px;
+    width: 50%;
+    height: 35px;
+
+}
+.input-box input:focus{
+    outline: none;
+    border: none;
+}
+.show-div{
+  max-height: 450px;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: 20px;
+    padding: 10px;
+    width: 60%;
+    border: 2px solid rgb(59, 58, 58);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.show-div img{
+    width: 100%;
+}
+.btnIcon{
+    margin: 10px 20px;
+    font-size: 26px;
+    color: white;
+}
+.btnIcon:hover{
+    color: royalblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+code {
+  font-family: 'Roboto', 'Courier New',
+    monospace;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.menue-active{
+  font-weight: 700;
+  color: rgb(82, 70, 255) !important;
+  border-bottom: 2px solid rgb(82, 70, 255) !important;
+}
+.nav-link{
+  margin: 5px;
+  font-size: 18px;
+}
+.nav-link:hover{
+    color: rgb(66, 69, 253) !important;
+}
+#header{
+  margin-top: 30px;
+  height: 75vh;
+  padding: 10px !important;
+}
+.btn-get-started{
+  transition: 0.3s;
+  text-decoration: none;
+  background-color: rgb(71, 71, 255);
+  padding: 10px 15px;
+  border-radius: 23px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-get-started:hover{
+  text-decoration: none;
+  background-color: #fff;
+  padding: 10px 15px;
+  border-radius: 23px;
+  border: 1px solid rgb(71, 71, 255);
+  }
+strong{
+  color: rgb(71, 71, 255);
+}
+.header-img{
+  padding: 50px !important;
+  
+}
+.animated{
+  /* margin: 10px; */
+  width: 50%;
+  height: 50%;
+  animation: swing ease-in-out 1s infinite alternate-reverse both;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+@keyframes swing {
+  0% { transform: rotate(3deg); }
+  100% { transform: rotate(-3deg); }
+  
+}
+.row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-div{
+  margin: 30px;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center !important;
+  align-items: center;
+  padding: 0 30px;
+}
+.service-box{
+  margin-top: 70px;
+  height: 70vh;
+  padding: 10px !important;
+}
+.card{
+  /* border: 2px solid red !important; */
+  width: 18rem !important;
+}
+.card-img-top{
+  width: 100% !important;
+}
+#card-box{  
+  padding: 20px;
+  flex-wrap: wrap;
+  height: auto;
+  /* border: 2px solid red; */
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  
+}
+.submitBtn{
+  padding: 10px 25px !important;
+  border-radius: 23px !important;
+}
+.submitBtn:hover{
+  background-color: white !important;
+  color: rgb(71, 71, 255) !important;
+  border: 1px solid rgb(71, 71, 255);
+}
+#btn-box{
+  width: 100%;
+  /* border: 2px solid red !important; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer{
+  height: 40px;
+  padding: 0px !important;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content-box{
+  /* border: 2px solid red; */
+  margin-bottom: 10px !important;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  height: auto !important;
+}
+.searchImg{
+  width:400px;
+  height: 400px;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+@media screen and (max-width: 750px) {
+    
+    .content-box{
+      margin-top: 30px !important;
+      padding: 30px;
+      height: 20vh !important;
+    }
+    .animated{
+      width: 40%;
+      height: 40%;
+      animation: swing ease-in-out 1s infinite alternate-reverse both;
+    }
+    #header{
+      /* border: 2px solid red; */
+      margin-top: 30px;
+      height: 100vh;
+      padding: 10px !important;
+    }
+    .content-div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+    }
+    .search-div{
+      padding: 30px;
+      /* border: 1px solid grey; */
+        width: 100%;    
+        height: 80vh;
+    }
+    .searchImg{
+      height: 250px;
+
+    }
+    
+}
+
+/* weather app */
+
+.weather-box{
+  border: 1px solid rgb(37, 37, 37);
+  background-color: #fff;
+  width: 50%;
+  min-height: 350px;
+  height: auto;
+}
+.inputBox{
+  padding: 10px;
+  display: flex;
+  width: 100%;
+  display: flex;
+}
+.inputBox input{
+  height: 40px;
+  font-size: 16px;
+  padding: 3px 20px;
+  width: 75%;
+  margin: 10px;
+}
+.icons{
+  margin: 15px;
+  font-size: 30px;
+}
+.icons:hover{
+  color: #fff !important;
 }
